--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer portfolio</title>
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
     <header>
-        
+        <nav>
+            <h3>Mary</h3>
+            <ul>
+                <li><a href="">portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button>Hire Me</button></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
