--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2 class="banner-title">Mary Hardy</h2>
                 <p class="banner-text">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
-                <button class="btn-irregular">Contact</button>
+                <button class="btn-exception">Contact</button>
             </div>
             <img src="images/hardy.png" alt="Picture of Mary Hardy" class="hardy-picture">
         </div>
