--- a/index.html
+++ b/index.html
@@ -90,6 +90,44 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="resume-container">
+                <h2>A summary of My Resume</h2>
+            <div class="resume-column-container" >
+                <div class="resume-column">
+                    <h3>My Education</h3>
+                    <h4 class="resume-title">Master in Computer Engineering</h4>
+                    <p class="resume-institute">Harvard University / 2015 - 2017</p>
+                    <p class="resume-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <hr>
+                    <h4 class="resume-title">Master in Computer Engineering</h4>
+                    <p class="resume-institute">Harvard University / 2015 - 2017</p>
+                    <p class="resume-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <hr>
+                    <h4 class="resume-title">Master in Computer Engineering</h4>
+                    <p class="resume-institute">Harvard University / 2015 - 2017</p>
+                    <p class="resume-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="resume-column">
+                    <h3>My Experience</h3>
+                    <h4 class="resume-title">Sr. Font End Developer</h4>
+                    <p class="resume-institute">Apple Inc / 2020 - Current</p>
+                    <p class="resume-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <hr>
+                    <h4 class="resume-title">Jr. Font End Developer</h4>
+                    <p class="resume-institute">Dribbble Inc / 2018 - 2022</p>
+                    <p class="resume-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <hr>
+                    <h4 class="resume-title">HTML Developer</h4>
+                    <p class="resume-institute">Adobe Inc / 2017 - 2018</p>
+                    <p class="resume-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                </div>
+            </div>
+        </section>
+        <div class="download-cv">
+        <button class="btn-primary" style="">Download CV</button>
+        </div>
     </main>
     <footer>
 
