--- a/index.html
+++ b/index.html
@@ -130,7 +130,29 @@
         </div>
     </main>
     <footer>
-
+        <div class="footer-column">
+            <h3>Let's Connect</h3>
+            <p style="width:560px;height:55px">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="Social links">
+                <a href=""><img src="images/icons/facebook.png" alt="Facebook logo"></a>
+                <a href=""><img src="images/icons/twitter.png" alt="Twitter logo"></a>
+                <a href=""><img src="images/icons/insta.png" alt="Instagram logo"></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3>Message me</h3>
+            <form action="">
+                <input type="text" placeholder="Your Name" style="width:460px;height:40px;"><br>
+                <input type="email" placeholder="Your email" style="width:460px;height:40px;"><br>
+                <textarea placeholder="Message" style="width:460px;height:120px;margin-top:10px;"></textarea><br>
+                <input type="submit" value="submit" style="border-radius: 5px;
+                background: #FD6E0A;
+                border:0;
+                color:white;
+                padding:15px 35px;
+                margin-top:10px;">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
